--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@metamask/sdk-react": "^0.26.5",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@tanstack/react-query": "^5.51.16",
+    "@walletconnect/react-native-compat": "^2.14.0",
+    "@web3modal/wagmi-react-native": "^2.0.0",
+    "eciesjs": "^0.3.19",
+    "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-svg": "^15.4.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "viem": "^2.18.6",
+    "wagmi": "^2.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
